--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="scatterstylesheet.css">
     <!-- D3.js Source -->
-    <script type= "text/javascript" src="http://d3js.org/d3.v4.min.js"></script>       
+    <script type= "text/javascript" src="https://d3js.org/d3.v4.min.js"></script>       
   </head>
   <body>
-    <script type= "text/javascript" src="http://d3js.org/d3.v4.min.js"></script>
+    
     <h1 style = "text-align:center; color:steelblue"><bold> Energy Consumption, 2010 </bold></h1>
     <!-- Your D3.js code for making a Bar Graph -->
     <script type="text/javascript" src="index.js"></script>
