--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <link rel="stylesheet" href="scatter.css" charset="utf-8">
 
 <body>
-    
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.5/d3-legend.min.js"></script>    
-<script src="scatter.js"></script>
+
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.5/d3-legend.min.js"></script>    
+    <script src="scatter.js"></script>
+    <p><b>Karthik Balakrishna</b></p>  
+    <p style ="font-size: 11px">kabalakr@ucsc.edu</p>
+    <p style ="font-size: 11px">CMPS 263</p>
+
+
 </body>    
